--- a/configs/default.yml
+++ b/configs/default.yml
@@ -1,10 +1,14 @@
 # default.yml
 
-address:
-  host: 0.0.0.0
-  port: 8080
+server:
+  address:
+    host: 0.0.0.0
+    port: 8080
+  restore: true
+  store_interval: 1
+  store_file: "/tmp/devops-metrics-db.json"
 
 agent:
-  poll_interval: 1000
-  report_interval: 2000
-  client_timeout: 3000
+  poll_interval: 1
+  report_interval: 10
+  client_timeout: 3
