--- a/develop.yml
+++ b/develop.yml
@@ -8,11 +8,11 @@ server:
 
 agent:
   poll_interval: 1s
-  report_interval: 10s
+  report_interval: 1s
   client_timeout: 1s
 
 store:
-  database: null
+  database: null #"postgres://postgres:postgres@localhost/postgres?sslmode=disable"
   store_file: "/tmp/devops-metrics-db.json"
-  restore: false
-  store_interval: 300s
+  restore: true
+  store_interval: 5m0s
